--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,13 @@
 services:
-  # Backend Service
   - type: web
     name: panchayat-backend
     env: node
     branch: main
-    rootDir: backend       # Deploy from the backend folder
+    rootDir: backend       # this tells Render to look inside backend for package.json
     plan: free
     buildCommand: npm install
     startCommand: npm start
+    envVars:
+      - key: PORT
+        value: "5000"
+      - key: MONGO_URI
